// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InformationContainer component > Render correctly with JSX as content 1`] = `
<div
  className="MuiStack-root css-1xcvc1q-MuiStack-root"
>
  <div
    className="MuiBox-root css-iuqs4u"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
    >
      test-title
    </p>
    <hr
      className="MuiDivider-root MuiDivider-fullWidth css-159wgzx-MuiDivider-root"
    />
    <span
      className="MuiTypography-root MuiTypography-caption css-g171c3-MuiTypography-root"
    >
      label-description
    </span>
  </div>
  <div
    className="MuiBox-root css-1rr4qq7"
  >
    <div
      className="MuiTypography-root MuiTypography-body2 css-1vn33h7-MuiTypography-root"
    >
      <span
        className="MuiBox-root css-13o7eu2"
      >
        <p>
          information
        </p>
      </span>
    </div>
  </div>
</div>
`;

exports[`InformationContainer component > Render correctly with column direction 1`] = `
<div
  className="MuiStack-root css-nen11g-MuiStack-root"
>
  <div
    className="MuiBox-root css-1pdb85g"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
    >
      test-title
    </p>
  </div>
  <div
    className="MuiBox-root css-1rr4qq7"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-1vn33h7-MuiTypography-root"
    >
      <span
        className="MuiBox-root css-13o7eu2"
      >
        information
      </span>
    </p>
  </div>
</div>
`;

exports[`InformationContainer component > Render correctly with content as tring 1`] = `
<div
  className="MuiStack-root css-1xcvc1q-MuiStack-root"
>
  <div
    className="MuiBox-root css-iuqs4u"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
    >
      test-title
    </p>
    <hr
      className="MuiDivider-root MuiDivider-fullWidth css-159wgzx-MuiDivider-root"
    />
    <span
      className="MuiTypography-root MuiTypography-caption css-g171c3-MuiTypography-root"
    >
      label-description
    </span>
  </div>
  <div
    className="MuiBox-root css-1rr4qq7"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-1vn33h7-MuiTypography-root"
    >
      <span
        className="MuiBox-root css-13o7eu2"
      >
        information
      </span>
    </p>
  </div>
</div>
`;

exports[`InformationContainer component > Render correctly with copy to clipboard button 1`] = `
<div
  className="MuiStack-root css-1xcvc1q-MuiStack-root"
>
  <div
    className="MuiBox-root css-iuqs4u"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-1xwhmis-MuiTypography-root"
    >
      test-title
    </p>
  </div>
  <div
    className="MuiBox-root css-1rr4qq7"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-1vn33h7-MuiTypography-root"
    >
      <span
        className="MuiBox-root css-k1s5lc"
      >
        information
      </span>
      <button
        aria-label="Copia"
        aria-labelledby={null}
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-vqczhe-MuiButtonBase-root-MuiIconButton-root"
        data-mui-internal-clone-element={true}
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="ContentCopyIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
          />
        </svg>
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </p>
  </div>
</div>
`;

exports[`InformationContainer component > Renders correctly 1`] = `
<div
  className="MuiStack-root css-1xcvc1q-MuiStack-root"
>
  <div
    className="MuiBox-root css-iuqs4u"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
    >
      test-title
    </p>
  </div>
  <div
    className="MuiBox-root css-1rr4qq7"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-1vn33h7-MuiTypography-root"
    >
      <span
        className="MuiBox-root css-13o7eu2"
      >
        information
      </span>
    </p>
  </div>
</div>
`;

exports[`InformationContainer component > Renders the loading skeleton correctly 1`] = `
<div
  className="MuiStack-root css-1xcvc1q-MuiStack-root"
>
  <div
    className="MuiBox-root css-iuqs4u"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
      style={
        {
          "height": undefined,
          "width": undefined,
        }
      }
    />
  </div>
  <div
    className="MuiBox-root css-1rr4qq7"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
      style={
        {
          "height": undefined,
          "width": undefined,
        }
      }
    />
    <span
      className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
      style={
        {
          "height": undefined,
          "width": undefined,
        }
      }
    />
  </div>
</div>
`;
